kubernetes/apps/gompha/landing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing
  namespace: gompha
spec:
  selector:
    app: landing
  ports:
    - port: 80
      targetPort: 80
